@@ -1,2 +1,0 @@
-This is the Integrated Micro Solutions Twin Turbo 128 video driver for
-the modular Xorg server.
